ASC Prod BAckup/ASC Prod/force-app/main/default/objects/OrderSummary/fields/AccountPaymentMethodId__c.field-meta.xml
<CustomField>
    <fullName>AccountPaymentMethodId__c</fullName>
    <description>The custom payment method defined in the account</description>
    <label>Account Payment Method</label>
    <length>25</length>
    <type>Text</type>
</CustomField>