ASC Prod BAckup/ASC Prod/force-app/main/default/objects/OrderSummary/fields/Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country__c</fullName>
    <formula>BillingCountry</formula>
    <label>Billing Country</label>
    <type>Text</type>
</CustomField>