ASC Prod BAckup/ASC Prod/force-app/main/default/objects/OrderSummary/fields/Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status__c</fullName>
    <formula>CASE(TEXT(Status),
 &quot;Cancelled&quot;, &quot;Cancelled&quot;,
 &quot;new&quot;, &quot;New&quot;,
 &quot;pending&quot;, &quot;New&quot;,
TEXT(Status))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Status</label>
    <type>Text</type>
</CustomField>