ASC Prod BAckup/ASC Prod/force-app/main/default/objects/OrderSummary/fields/CustomerCarrierNumber__c.field-meta.xml
<CustomField>
    <fullName>CustomerCarrierNumber__c</fullName>
    <label>Customer Carrier Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>