ASC Prod BAckup/ASC Prod/force-app/main/default/objects/OrderSummary/fields/Payment_Card_Details__c.field-meta.xml
<CustomField>
    <fullName>Payment_Card_Details__c</fullName>
    <formula>IF(NOT(ISBLANK(Payment_Method__c)),
    Payment_Method__r.BillingFullName__c &amp; &quot; - &quot; &amp; Payment_Method__r.Last4__c,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Card Details</label>
    <type>Text</type>
</CustomField>