ASC Prod BAckup/ASC Prod/force-app/main/default/objects/OrderSummary/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Payment Method (Credit Card) Customer has selected for an Order.</description>
    <inlineHelpText>Payment Method (Credit Card) Customer has selected for an Order.</inlineHelpText>
    <label>Payment Method</label>
    <referenceTo>PaymentMethod__c</referenceTo>
    <relationshipLabel>Order Summaries</relationshipLabel>
    <relationshipName>Order_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>