ASC Prod BAckup/ASC Prod/force-app/main/default/objects/OrderSummary/fields/Sales_Order_Confirmation_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Confirmation_Number__c</fullName>
    <label>Sales Order Confirmation Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>