ASC Prod BAckup/ASC Prod/force-app/main/default/objects/OrderSummary/fields/Store_Status__c.field-meta.xml
<CustomField>
    <fullName>Store_Status__c</fullName>
    <formula>CASE(
    Status,
    &quot;Processing&quot;, &quot;Processing&quot;,
    &quot;Created&quot;, &quot;Processing&quot;,
    &quot;Shipped&quot;, &quot;Shipped&quot;,
    &quot;Unknown Status&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store Status</label>
    <type>Text</type>
</CustomField>