ASC Prod BAckup/ASC Prod/force-app/main/default/objects/OrderSummary/listViews/all_order_summaries.listView-meta.xml
<ListView>
    <fullName>all_order_summaries</fullName>
    <columns>Name</columns>
    <columns>Account_Number__c</columns>
    <columns>Billing_Country__c</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>OrderedDate</columns>
    <columns>GrandTotalAmount</columns>
    <columns>CurrencyIsoCode</columns>
    <columns>Description</columns>
    <filterScope>Everything</filterScope>
    <label>All Order Summaries</label>
</ListView>