ASC Prod BAckup/ASC Prod/force-app/main/default/objects/OrderSummary/listViews/This_Week_s_Order_Summaries.listView-meta.xml
<ListView>
    <fullName>This_Week_s_Order_Summaries</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>OrderedDate</columns>
    <columns>GrandTotalAmount</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CreatedDate</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>This Week&apos;s Order Summaries</label>
</ListView>